--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>КОШЕРНОoOW</title>
+    <title>КОШЕРНО</title>
 </head>
 <body>
     <header>
@@ -45,7 +45,11 @@
     <button class="scrollToTop" onclick="scrollToTop()"></button>
 
     <footer>
+        
         <p>&copy; 2024 КОШЕРНО Усі права захищені.</p>
+
+        <a href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0" class="marquee"> посилання</a> щоб отримати більше інформації.</p>	
+
     </footer>
 
     <script src="script.js"></script>
