--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <footer>
         
         <p>&copy; 2024 КОШЕРНО Усі права захищені.</p>
-        <p>
-        <a href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0" class="marquee"> посилання</a> щоб отримати більше інформації.</p>	
+        <p class="marquee">
+        <a href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0" > посилання</a> щоб отримати більше інформації.</p>	
         </p>
     </footer>
 
