--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">КОШЕРНО</a>
+                <a class="navbar-brand" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0">КОШЕРНО</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -50,19 +50,19 @@
             <div class="col-md-6">
                 <div class="price-filter">
                     <label class="form-label">Ціна:</label>
-                    <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10">
-                    <span id="priceValue" class="badge bg-secondary">1000 грн</span>
+                    <input type="range" class="form-range" id="priceRange" min="0" max="200" step="10">
+                    <span id="priceValue" class="badge bg-secondary">100 грн</span>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="sort">
-                    <select id="sortSelect" class="form-select">
-                        <option value="name">За назвою</option>
-                        <option value="priceAsc">Ціна (від низької)</option>
-                        <option value="priceDesc">Ціна (від високої)</option>
-                    </select>
-                </div>
-            </div>
+<!--            <div class="col-md-6">-->
+<!--                <div class="sort">-->
+<!--                    <select id="sortSelect" class="form-select">-->
+<!--                        <option value="name">За назвою</option>-->
+<!--                        <option value="priceAsc">Ціна (від низької)</option>-->
+<!--                        <option value="priceDesc">Ціна (від високої)</option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
 
         <div id="product-list" class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4"></div>
@@ -82,7 +82,7 @@
                         <div class="cart-total fw-bold">
                             Загальна сума: <span id="cartTotal">0</span> грн
                         </div>
-                        <button id="checkoutBtn" class="btn btn-success">Оформити замовлення</button>
+                        <a id="checkoutBtn" href="https://send.monobank.ua/jar/2pQqQghwHu" class="btn btn-success">Оформити замовлення</a>
                     </div>
                 </div>
             </div>
