--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0">КОШЕРНО</a>
+                <a class="navbar-brand fw-bold" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0">КОШЕРНО  <i class="fa-solid fa-bag-shopping"></i></a>
                 <button class="navbar-toggler" aria-pressed="true" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                     <span class="navbar-toggler-icon"></span>
                 </button>
