--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%BE%D1%88%D0%B5%D1%80%D0%BD%D0%B0_%D1%97%D0%B6%D0%B0">КОШЕРНО  <i class="fa-solid fa-bag-shopping"></i></a>
                 <button class="navbar-toggler" aria-pressed="true" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -53,8 +53,7 @@
     </header>
 
     <main class="container py-4">
-        <div class="row mb-4">
-
+<!--        <div class="row mb-4">-->
 <!--            <div class="col-md-6">-->
 <!--                <div class="sort">-->
 <!--                    <select id="sortSelect" class="form-select">-->
@@ -64,7 +63,7 @@
 <!--                    </select>-->
 <!--                </div>-->
 <!--            </div>-->
-        </div>
+<!--        </div>-->
 
         <div id="product-list" class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4"></div>
 
